[metadata]
description-file = README.md

[run]
source = homekit

[flake8]
max-line-length = 120
statistics = True
; F401  module imported but unused
; F403  ‘from module import *’ used; unable to detect undefined names
; F405  name may be undefined, or defined from star imports: module
ignore=F401,F403,F405
